--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,40 +5,7 @@ on:
     types:
       - created
 
-
 jobs:
-#  serverless:
-#    name: Publish serverless release
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#      - name: Set env
-#        run: echo "RELEASE_VERSION=$(echo ${GITHUB_REF:10})" >> $GITHUB_ENV
-#      - name: Initialization environment
-#        uses: actions/setup-python@v1
-#        with:
-#          python-version: 3.7
-#      - name: Install requirements
-#        run: pip install -t . -r ./requirements.txt
-#      - name: Install zip
-#        run: |
-#          sudo -E apt-get update
-#          sudo -E apt-get install zip
-#      - name: Pack serverless file
-#        run: |
-#          zip -r "Court_Reservation.zip" . -x "*.pyc" -x "./bin/*" -x "*.so" -x ".git/*" -x ".github/*" -x ".gitignore"
-#        env:
-#          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
-#      - name: Upload
-#        uses: actions/upload-release-asset@v1.0.1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ github.event.release.upload_url }}
-#          asset_path: ./Court_Reservation.zip
-#          asset_name: Court-Reservation-${{ github.event.release.tag_name }}-serverless.zip
-#          asset_content_type: binary/octet-stream
   serverless:
     name: Publish serverless release
     runs-on: ubuntu-latest
@@ -52,36 +19,28 @@ jobs:
         with:
           python-version: 3.7
       - name: Install requirements
-        run: |
-          pip install -r ./requirements.txt
-          pip install pyinstaller
-      - name: Build
-        run: |
-          pyinstaller -F -n "Court_Reservation" index.py
+        run: pip install -t . -r ./requirements.txt
       - name: Install zip
         run: |
           sudo -E apt-get update
           sudo -E apt-get install zip
-      - name: Pack
+      - name: Pack serverless file
         run: |
-          mv ./config.example.toml ./dist/config.toml
-          mv index.sh ./dist/index.sh
-          cd dist
-          chmod +x Court_Reservation
-          zip -r "release-linux.zip" .
+          mv -f ./config.example.toml ./config.toml
+          zip -r "release-serverless.zip" . -x "*.pyc" -x "./bin/*" -x "*.so" -x ".git/*" -x ".github/*" -x ".gitignore" -x "icon.ico" -x "resources_refresh.py" -x "resources.md"
       - name: Upload
         uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./dist/release-linux.zip
+          asset_path: ./release-serverless.zip
           asset_name: Court-Reservation-${{ github.event.release.tag_name }}-serverless.zip
           asset_content_type: binary/octet-stream
       - uses: actions/upload-artifact@v3
         with:
-          name: linux-release
-          path: ./release-linux.zip
+          name: linux-release.zip
+          path: ./release-serverless.zip
   windows:
     name: Publish windows release
     runs-on: windows-2022
@@ -110,9 +69,9 @@ jobs:
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./release-Windows.zip
-          asset_name: Court-Reservation-${{ github.event.release.tag_name }}-Windows.exe
+          asset_name: Court-Reservation-${{ github.event.release.tag_name }}-Windows.zip
           asset_content_type: binary/octet-stream
       - uses: actions/upload-artifact@v3
         with:
-          name: windows-release
+          name: windows-release.zip
           path: ./release-Windows.zip
