--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,6 +1,7 @@
 name: Publish Release
 
 on:
+  workflow_dispatch:
   release:
     types:
       - created
@@ -29,6 +30,11 @@ jobs:
           mv -f ./config.example.toml ./config.toml
           zip -r "release-serverless.zip" . -x "*.pyc" -x "./bin/*" -x "*.so" -x ".git/*" -x ".github/*" -x ".gitignore" -x "icon.ico" -x "resources_refresh.py" -x "resources.md" -x "./docs/*"
       - name: Upload
+        uses: actions/upload-artifact@v3
+        with:
+          name: linux-release.zip
+          path: ./release-serverless.zip
+      - name: Release
         uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -37,10 +43,7 @@ jobs:
           asset_path: ./release-serverless.zip
           asset_name: Court-Reservation-${{ github.event.release.tag_name }}-serverless.zip
           asset_content_type: binary/octet-stream
-      - uses: actions/upload-artifact@v3
-        with:
-          name: linux-release.zip
-          path: ./release-serverless.zip
+
   windows:
     name: Publish windows release
     runs-on: windows-2022
@@ -63,6 +66,11 @@ jobs:
           Move-Item -Force -Path .\config.example.toml -Destination .\config.toml
           Get-ChildItem -Path .\dist\*.exe, .\config.toml, .\README.md | Compress-Archive -DestinationPath .\release-Windows.zip
       - name: Upload
+        uses: actions/upload-artifact@v3
+        with:
+          name: windows-release.zip
+          path: ./release-Windows.zip
+      - name: Release
         uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -71,7 +79,3 @@ jobs:
           asset_path: ./release-Windows.zip
           asset_name: Court-Reservation-${{ github.event.release.tag_name }}-Windows.zip
           asset_content_type: binary/octet-stream
-      - uses: actions/upload-artifact@v3
-        with:
-          name: windows-release.zip
-          path: ./release-Windows.zip
