--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Pack serverless file
         run: |
           mv -f ./config.example.yaml ./config.yaml
-          zip -r "release-serverless.zip" . -x "*.pyc" -x "./bin/*" -x "*.so" -x ".git/*" -x ".github/*" -x ".gitignore" -x "icon.ico" -x "resources_refresh.py" -x "resources.md" -x "./docs/*"
+          zip -r "release-serverless.zip" . -x "*.pyc" -x "./bin/*" -x "*.so" -x ".git/*" -x ".github/*" -x ".gitignore" -x "icon.ico" -x "resources_refresh.py" -x "resources.md" -x "./docs/*" -x "resources.py" -x "resources_to_md.py"
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
@@ -44,38 +44,38 @@ jobs:
           asset_name: Court-Reservation-${{ github.event.release.tag_name }}-serverless.zip
           asset_content_type: binary/octet-stream
 
-  windows:
-    name: Publish windows release
-    runs-on: windows-2022
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Initialization environment
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.7
-      - name: Install requirements
-        run: |
-          pip install -r ./requirements.txt
-          pip install pyinstaller
-      - name: Build
-        run: |
-          pyinstaller -F -i icon.ico -n "Court_Reservation.exe" index.py
-      - name: Pack
-        run: |
-          Move-Item -Force -Path .\config.example.yaml -Destination .\config.yaml
-          Get-ChildItem -Path .\dist\*.exe, .\config.yaml, .\resources.json .\README.md | Compress-Archive -DestinationPath .\release-Windows.zip
-      - name: Upload
-        uses: actions/upload-artifact@v3
-        with:
-          name: windows-release.zip
-          path: ./release-Windows.zip
-      - name: Release
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./release-Windows.zip
-          asset_name: Court-Reservation-${{ github.event.release.tag_name }}-Windows.zip
-          asset_content_type: binary/octet-stream
+  # windows:
+  #   name: Publish windows release
+  #   runs-on: windows-2022
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Initialization environment
+  #       uses: actions/setup-python@v1
+  #       with:
+  #         python-version: 3.7
+  #     - name: Install requirements
+  #       run: |
+  #         pip install -r ./requirements.txt
+  #         pip install pyinstaller
+  #     - name: Build
+  #       run: |
+  #         pyinstaller -F -i icon.ico -n "Court_Reservation.exe" index.py
+  #     - name: Pack
+  #       run: |
+  #         Move-Item -Force -Path .\config.example.yaml -Destination .\config.yaml
+  #         Get-ChildItem -Path .\dist\*.exe, .\config.yaml, .\resources.json .\README.md | Compress-Archive -DestinationPath .\release-Windows.zip
+  #     - name: Upload
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: windows-release.zip
+  #         path: ./release-Windows.zip
+  #     - name: Release
+  #       uses: actions/upload-release-asset@v1.0.1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url: ${{ github.event.release.upload_url }}
+  #         asset_path: ./release-Windows.zip
+  #         asset_name: Court-Reservation-${{ github.event.release.tag_name }}-Windows.zip
+  #         asset_content_type: binary/octet-stream
