--- a/config.example.yaml
+++ b/config.example.yaml
@@ -3,7 +3,7 @@ log_level: debug
 # 验证码识别 API
 ocr_api: https://cocr.xm.mk/
 # 资源文件，留空使用本地文件
-resources_file: https://xm798.github.io/NUAA-Court-Reservation/files/resources.json
+resources_file: https://file-1257193553.cos.ap-shanghai.myqcloud.com/NUAA-Court-Reservation/resources.json
 
 # 登录信息
 auth:
